--- a/data/projects.json
+++ b/data/projects.json
@@ -2,22 +2,20 @@
     "projects":[
         {
             "id":1,
-            "name":"Program za izvedbo frekvenčne analize",
+            "name":"Kraftia - spletna trgovina",
             "short-description":"This is a project",
             "long-description":"This is a project",
             "type":"OpenSource",
-            "start_date":"01/01/2018",
+            "start_date":"01/01/2019",
             "end_date":"01/01/2018",
-            "url":"",
-            "image":"https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
+            "url":"https://kraftia.slomaster.info/",
+            "image":"https://kraftia.ch/wp-content/uploads/2021/07/logo205.png",
             "gallery":[
-                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
-                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
-                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
+               
             ],
-            "youtube":"https://www.youtube.com/watch?v=dQw4w9WgXcQ",
+            "youtube":"",
             "year":"2022",
-            "status":"Projekt je zaključen",
+            "status":"Projekt je končan",
             "priority":"-",
             "github-link":"",
             "team":[
@@ -31,16 +29,45 @@
                 "WPF"
             ]
         },
+            {
+                "id":2,
+                "name":"Woocommerce - namizna aplikacija za admine",
+                "short-description":"This is a project",
+                "long-description":"This is a project",
+                "type":"OpenSource",
+                "start_date":"01/01/2018",
+                "end_date":"01/01/2018",
+                "url":"",
+                "image":"https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
+                "gallery":[
+                    
+                ],
+                "youtube":"https://www.youtube.com/watch?v=dQw4w9WgXcQ",
+                "year":"2022",
+                "status":"Projekt je izdelavi",
+                "priority":"-",
+                "github-link":"",
+                "team":[
+                    {
+                        "name":"Timotej Medved",
+                        "role":"Developer"
+                    }
+                ],
+                "tags":[
+                    "C#",
+                    "WPF"
+                ]
+            },
         {
-            "id":1,
+            "id":3,
             "name":"Program za izvedbo frekvenčne analize",
-            "short-description":"This is a project",
-            "long-description":"This is a project",
+            "short_description":"This is a project",
+            "long_description":"This is a project",
             "type":"OpenSource",
-            "start_date":"01/01/2018",
+            "start_date":"2022",
             "end_date":"01/01/2018",
             "url":"",
-            "image":"https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
+            "image":"https://images.pexels.com/photos/177598/pexels-photo-177598.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
             "gallery":[
                 "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
                 "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
@@ -50,7 +77,7 @@
             "year":"2022",
             "status":"Projekt je zaključen",
             "priority":"-",
-            "github-link":"",
+            "github_link":"",
             "team":[
                 {
                     "name":"Timotej Medved",
@@ -60,6 +87,69 @@
             "tags":[
                 "C#",
                 "WPF"
+            ]
+        },
+        {
+            "id":4,
+            "name":"Slomaster - spletna stran",
+            "short_description":"This is a project",
+            "long_description":"This is a project",
+            "type":"OpenSource",
+            "start_date":"2022",
+            "end_date":"01/01/2018",
+            "url":"",
+            "image":"https://images.pexels.com/photos/177598/pexels-photo-177598.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
+            "gallery":[
+                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
+                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
+                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
+            ],
+            "youtube":"https://www.youtube.com/watch?v=dQw4w9WgXcQ",
+            "year":"2018",
+            "status":"Projekt je zaključen",
+            "priority":"-",
+            "github_link":"",
+            "team":[
+                {
+                    "name":"Timotej Medved",
+                    "role":"Developer"
+                }
+            ],
+            "tags":[
+                "PHP",
+                "HTML",
+                "CSS",
+                "JS"
+            ]
+        },
+        {
+            "id":5,
+            "name":"Spletna stran S Cirkovških hodnikov",
+            "short_description":"This is a project",
+            "long_description":"This is a project",
+            "type":"OpenSource",
+            "start_date":"01/01/2018",
+            "end_date":"01/01/2018",
+            "url":"",
+            "image":"https://i.ytimg.com/vi/329bP7CscDE/hqdefault.jpg?sqp=-oaymwEjCPYBEIoBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLBr97AGW8TFUD_8ciboIk2M6AdCiw",
+            "gallery":[
+                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
+                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
+                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
+            ],
+            "youtube":"https://www.youtube.com/watch?v=dQw4w9WgXcQ",
+            "year":"2016",
+            "status":"Projekt je zaključen",
+            "priority":"-",
+            "github_link":"",
+            "team":[
+                {
+                    "name":"Timotej Medved",
+                    "role":"Developer"
+                }
+            ],
+            "tags":[
+                "Weebly"
             ]
         }
     ]
