--- a/data/projects.json
+++ b/data/projects.json
@@ -2,6 +2,7 @@
     "projects":[
         {
             "id":1,
+            "vsebina": "false",
             "name":"Kraftia - spletna trgovina",
             "short-description":"This is a project",
             "long-description":"This is a project",
@@ -31,6 +32,7 @@
         },
             {
                 "id":2,
+                "vsebina": "false",
                 "name":"Woocommerce - namizna aplikacija za admine",
                 "short-description":"This is a project",
                 "long-description":"This is a project",
@@ -60,6 +62,7 @@
             },
         {
             "id":3,
+            "vsebina": "false",
             "name":"Program za izvedbo frekvenčne analize",
             "short_description":"This is a project",
             "long_description":"This is a project",
@@ -69,9 +72,6 @@
             "url":"",
             "image":"https://images.pexels.com/photos/177598/pexels-photo-177598.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
             "gallery":[
-                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
-                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
-                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
             ],
             "youtube":"https://www.youtube.com/watch?v=dQw4w9WgXcQ",
             "year":"2022",
@@ -91,6 +91,7 @@
         },
         {
             "id":4,
+            "vsebina": "false",
             "name":"Slomaster - spletna stran",
             "short_description":"This is a project",
             "long_description":"This is a project",
@@ -100,9 +101,7 @@
             "url":"",
             "image":"https://images.pexels.com/photos/177598/pexels-photo-177598.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
             "gallery":[
-                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
-                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
-                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
+
             ],
             "youtube":"https://www.youtube.com/watch?v=dQw4w9WgXcQ",
             "year":"2018",
@@ -124,6 +123,7 @@
         },
         {
             "id":5,
+            "vsebina": "false",
             "name":"Spletna stran S Cirkovških hodnikov",
             "short_description":"This is a project",
             "long_description":"This is a project",
@@ -133,9 +133,7 @@
             "url":"",
             "image":"https://i.ytimg.com/vi/329bP7CscDE/hqdefault.jpg?sqp=-oaymwEjCPYBEIoBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLBr97AGW8TFUD_8ciboIk2M6AdCiw",
             "gallery":[
-                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
-                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
-                "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
+
             ],
             "youtube":"https://www.youtube.com/watch?v=dQw4w9WgXcQ",
             "year":"2016",
