--- a/data/projects.json
+++ b/data/projects.json
@@ -176,7 +176,11 @@
                 }
             ],
             "tags":[
-                "Weebly"
+                "HTML",
+                "CSS",
+                "PHP",
+                "JS",
+                "MDB"
             ]
         }
     ]
