--- a/data/projects.json
+++ b/data/projects.json
@@ -99,7 +99,7 @@
             "start_date":"2022",
             "end_date":"01/01/2018",
             "url":"https://slomaster.info/",
-            "image":"/slomaster.png",
+            "image":"/images/slomaster.png",
             "gallery":[
                 
             ],
