--- a/data/projects.json
+++ b/data/projects.json
@@ -93,8 +93,8 @@
             "id":4,
             "vsebina": "true",
             "name":"Slomaster - spletna stran",
-            "short_description":"This is a project",
-            "long_description":"This is a project",
+            "short_description":"",
+            "long_description":"",
             "type":"OpenSource",
             "start_date":"2022",
             "end_date":"01/01/2018",
