--- a/data/projects.json
+++ b/data/projects.json
@@ -26,8 +26,12 @@
                 }
             ],
             "tags":[
-                "C#",
-                "WPF"
+                "HTML",
+                "CSS",
+                "JS",
+                "PHP",
+                "TAILWIND",
+                "WORDPRESS"
             ]
         },
             {
