--- a/data/knowledge.json
+++ b/data/knowledge.json
@@ -87,6 +87,10 @@
         {
             "name":"WordPress",
             "procent":60
+        },
+        {
+            "name":"Git",
+            "procent":75
         }
 
     ]
